1998-05-19  Jim Meyering  <meyering@ascend.com>

	* jm-macros.m4: Add jm_FUNC_LCHOWN.
	* lchown.m4: New file.

	* Makefile.am.in: New file.
	* Makefile.am (Makefile.am): Depend on Makefile.am.in.

1998-05-14  Jim Meyering  <meyering@ascend.com>

	* Makefile.am (EXTRA_DIST): Add them.
	* jm-macros.m4: New file.
	* utimbuf.m4: New file.

1998-05-12  Jim Meyering  <meyering@ascend.com>

	* Makefile.am (EXTRA_DIST): Add isc-posix.m4.

1998-05-11  Jim Meyering  <meyering@ascend.com>

	* isc-posix.m4: New file.

1998-05-10  Jim Meyering  <meyering@ascend.com>

	* jm-mktime.m4: Use AM_FUNC_MKTIME, now that it's up to date.

1998-05-09  Jim Meyering  <meyering@ascend.com>

	* Makefile.am (EXTRA_DIST): Add ssize_t.m4.
	(EXTRA_DIST): Remove mktime.m4, now that the new version is included
	with automake.

	* ssize_t.m4: New file.
	* mktime.m4: Remove file -- the new automake has this now.

1998-04-26  Jim Meyering  <meyering@ascend.com>

	* assert.m4: New file.
	* Makefile.am (EXTRA_DIST): Add assert.m4.

1998-04-05  Jim Meyering  <meyering@ascend.com>

	* prereq.m4 (jm_PREREQ_REGEX): New macro.
	(jm_PREREQ): Use it here.

1998-03-23  Jim Meyering  <meyering@eng.ascend.com>

	* inttypes_h.m4: Kludges so I don't have to add HAVE_INTTYPES_H
	in acconfig.h.

1998-03-15  Jim Meyering  <meyering@eng.ascend.com>

	* prereq.m4: New file.
	* error.m4: New file.
	* Makefile.am (EXTRA_DIST): Add error.m4 and prereq.m4.

1998-02-07  Jim Meyering  <meyering@eng.ascend.com>

	* getline.m4: Don't set am_cv_func_working_getline before the
	cache-check for the same variable -- that defeated the purpose of
	the test; the test program was never run.  This was a problem only
	on systems with losing getline functions -- HP-UX 10.20 is one.
	Reported by Bjorn Helgaas.

1998-02-06  Jim Meyering  <meyering@eng.ascend.com>

	* Makefile.am (EXTRA_DIST): Add perl.m4.

1998-01-10  Jim Meyering  <meyering@na-net.ornl.gov>

	* Makefile.am (EXTRA_DIST): Add const.m4.
